k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devbcn-conference
  labels:
    name: devbcn-conference
